--- a/helm/deployment.yaml
+++ b/helm/deployment.yaml
@@ -26,6 +26,8 @@ spec:
         ports:
         - containerPort: 8080
         env:
+        - name: ASPNETCORE_URLS
+          value: "http://*:8080"
         - name: UserId
           valueFrom:
             secretKeyRef:
