--- a/stage/helm/pg-client-secret.yaml
+++ b/stage/helm/pg-client-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: pg-client-secret
-  namespace: dotnet-dev
+  namespace: dotnet-stage
 type: Opaque
 data:
   UserId: cG9zdGdyZXM=
