--- a/stage/helm/client-svc.yaml
+++ b/stage/helm/client-svc.yaml
@@ -3,8 +3,8 @@ kind: Service
 metadata:
   labels:
     app: client-dotnet-deploy
-  name: client-svc
-  namespace: dotnet-dev
+  name: client-svc-stage
+  namespace: dotnet-stage
 spec:
   ports:
   - protocol: TCP
