--- a/stage/helm/deployment.yaml
+++ b/stage/helm/deployment.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: client-dotnet-deploy
-        image: wabankcontainerregistry.azurecr.io/dotnet-client-dev:latest
+        image: wabankcontainerregistry.azurecr.io/dotnet-client-stage:latest
         ports:
         - containerPort: 8080
         env:
